--- a/find_location.html
+++ b/find_location.html
@@ -97,7 +97,7 @@
 
 <div class='sub_form'>
 Is this the correct street to perform a disaster assessment for?<br />
-<form action='start_disaster_assessment.html' method='post'>
+<form action='assess_form.html' method='post'>
 	<input type='radio' id='geolocate_street' name='street_name' value=''>Yes, use <span style='font-weight:bold' id="address_data2"></span><br />
 	<input type='radio' name='street_name' value='other'>No, use this street name: <br />
 	<input type='text' style='margin-left:2.5em' name='street_name_user' />
