--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function noLocation()
 	<p><b>Welcome to the Red Cross disaster response mobile application.</b> Please log in below to access the application.</p>
 
 <div class='sub_form'>	
-	<form action='lookup_reverse_geocode.html' method='post'>
+	<form action='find_location.html' method='post'>
 		
 	<input type='hidden' name='lat' >
 	<b>Username:</b><br />
