--- a/forgot_password_status.html
+++ b/forgot_password_status.html
@@ -16,14 +16,17 @@ window.addEventListener('load', function(e) {
     setTimeout(function() { window.scrollTo(0, 1); }, 1);
   }, false);
 
-
-
 function func(){
 document.location = 'forgot_password.html';
+
 }
 </script>
 
+
+
 <body>
+
+<div class='success_message'>A mail was sent to you to reset your password!</div>
 	<h1>Mobile Disaster Reporting</h1>
 
 	<p><b>Welcome to the Red Cross disaster response mobile application.</b> Please log in below to access the application.</p>
