--- a/forgot_password.html
+++ b/forgot_password.html
@@ -17,34 +17,42 @@ window.addEventListener('load', function(e) {
   }, false);
 
 
+function validateForm()
+{
+var x=document.forms["pwdform"]["email"].value;
+var atpos=x.indexOf("@");
+var dotpos=x.lastIndexOf(".");
+if (atpos<1 || dotpos<atpos+2 || dotpos+2>=x.length)
+  {
+	
+  alert("Not a valid e-mail address");
 
-function func(){
-document.location = 'forgot_password.html';
+  return false;
+  }
+
+
 }
 </script>
 
-<body>
-	<h1>Mobile Disaster Reporting</h1>
 
-	<p><b>Welcome to the Red Cross disaster response mobile application.</b> Please log in below to access the application.</p>
+
+<body>
+	<h1>Forgot password</h1>
+
+	<p><b>We'll send you a mail with a link to reset your password</b></p>
 
 <div class='sub_form'>	
-	<form action='find_location.html' method='post'>
+	<form action='forgot_password_status.html' method='post' name="pwdform">
 
-	<input type='hidden' name='lat' >
-	<b>Username:</b><br />
-	<input type='text' name='username'/><br /><br />
+	
 
-	<b>Password:</b><br />
-	<input type='password' name='password'/><br /><br />
-	<b>Disaster</b><br />
-	<select name="Disaster">
-	<option value="Flood">Flood </option>
-	</select>
+	<b>Email-id:</b><br />
+	<input type='text' name="email"/><br /><br />
+	
 <br><br>
 <center>
-	<input type='submit' value='Log in...' />
-	<input type='button' value="Forgot Password" onclick="func()">
+	<input type='submit' value='OK' onclick="validateForm()"/>
+	
 </center>
 </div>
 </body>
