--- a/web/index.html
+++ b/web/index.html
@@ -16,10 +16,26 @@ window.addEventListener('load', function(e) {
     setTimeout(function() { window.scrollTo(0, 1); }, 1);
   }, false);
 
+function forgot_password()
+{
+	document.location = 'forgot_password.html';
+}
 
-
-function func(){
-document.location = 'forgot_password.html';
+function initialize_disaster_session()
+{
+	// TODO: Check to see if there are any elements in local storage already to deal with.
+	//		 Present the user with a screen to address those.
+	
+	// Check to see if a disaster reporting key incrementor exists - if not, set it at zero.
+	if(localStorage.getItem("disasterKey") == null)
+		localStorage.setItem("disasterKey", "0");
+	
+	// Add the volunteer User ID and Name to local storage
+	localStorage.setItem("volunteer_id", "1"); // TODO: Get this from remote
+	localStorage.setItem("volunteer_name", "Aaron"); // TODO: Get this from database
+	
+	// We're all set - forward the page.
+	document.location = "find_location.html";
 }
 </script>
 
@@ -42,8 +58,8 @@ document.location = 'forgot_password.html';
 	</select>
 <br><br>
 <center>
-	<input type='submit' value='Log in...' />
-	<input type='button' value="Forgot Password" onclick="func()">
+	<input type='button' value='Log in...' onClick="initialize_disaster_session()" />
+	<input type='button' value="Forgot Password" onclick="forgot_password()" />
 </center>
 </div>
 </body>
