--- a/web/assess_form.html
+++ b/web/assess_form.html
@@ -256,7 +256,7 @@ function echoStoredStreetName()
 </script>
 
 <body>
-<form action="FillInForm" method="post" name="disaster_form">
+<form action="FillInForm" method="post">
 <div class='info_message'>Welcome, Test Volunteer! <br />This is disaster entry #<script>document.write(parseInt(localStorage.getItem("disasterKey"))+1)</script>.</div>
 
 <div id="error_container" class='failure_message' style='display:none'>
