--- a/web/summary_review.html
+++ b/web/summary_review.html
@@ -42,7 +42,7 @@ function objGet(field_name)
 
 <body>
 
-<form method="post" action="final_steps.html">
+<form method="post" action="assess_form.html">
 
 <div class='info_message'>Please show this summary screen to the client and ask them to verify the information entered.</div>
 
@@ -237,7 +237,7 @@ I, <b><script> objGet("txt_first_name"); </script> <script> objGet("txt_last_nam
 
 <div class="bottom_button_row">
 <input type='button' value='Back' style='text-align:center;margin:auto;background-color:#dddddd' onClick="func()"/ >
-<input type='submit' value='Submit' style='text-align:center;margin:auto' / >
+<input type='submit' value='Submit' style='text-align:center;margin:auto' />
 </div>
 	</form>
 	</body>
