--- a/web/assess_form.html
+++ b/web/assess_form.html
@@ -259,7 +259,7 @@ function echoStoredStreetName()
 
 </head>
 <body>
-<form action="FillInForm" method="post">
+<form action="" method="post" name="disaster_form">
 <div class='info_message'>Welcome, Test Volunteer! <br />This is disaster entry #<script>document.write(parseInt(localStorage.getItem("disasterKey"))+1)</script>.</div>
 
 <div id="error_container" class='failure_message' style='display:none'>
