Adding todo flags for things to do

--- a/web/v2/index.html
+++ b/web/v2/index.html
@@ -1,5 +1,11 @@
 <!-- BEGIN PAGE HEADER -->
 
+<!--
+
+TODO: Integrate this with LogIn servlet (Aaron)
+	Write register page (Vidhya)
+-->
+
 <html manifest="mobileapp.manifest">
 
 <head>
